third_party/blink/web_tests/external/wpt/WebCryptoAPI/idlharness.https.any-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface mixin WindowOrWorkerGlobalScope: original interface mixin defined assert_true: Original interface mixin should be defined expected true got false
PASS Crypto interface: existence and properties of interface object
PASS Crypto interface object length
PASS Crypto interface object name
PASS Crypto interface: existence and properties of interface prototype object
PASS Crypto interface: existence and properties of interface prototype object's "constructor" property
PASS Crypto interface: existence and properties of interface prototype object's @@unscopables property
PASS Crypto interface: attribute subtle
PASS Crypto interface: operation getRandomValues(ArrayBufferView)
PASS CryptoKey interface: existence and properties of interface object
PASS CryptoKey interface object length
PASS CryptoKey interface object name
PASS CryptoKey interface: existence and properties of interface prototype object
PASS CryptoKey interface: existence and properties of interface prototype object's "constructor" property
PASS CryptoKey interface: existence and properties of interface prototype object's @@unscopables property
PASS CryptoKey interface: attribute type
PASS CryptoKey interface: attribute extractable
PASS CryptoKey interface: attribute algorithm
PASS CryptoKey interface: attribute usages
PASS SubtleCrypto interface: existence and properties of interface object
PASS SubtleCrypto interface object length
PASS SubtleCrypto interface object name
PASS SubtleCrypto interface: existence and properties of interface prototype object
PASS SubtleCrypto interface: existence and properties of interface prototype object's "constructor" property
PASS SubtleCrypto interface: existence and properties of interface prototype object's @@unscopables property
PASS SubtleCrypto interface: operation encrypt(AlgorithmIdentifier, CryptoKey, BufferSource)
PASS SubtleCrypto interface: operation decrypt(AlgorithmIdentifier, CryptoKey, BufferSource)
PASS SubtleCrypto interface: operation sign(AlgorithmIdentifier, CryptoKey, BufferSource)
PASS SubtleCrypto interface: operation verify(AlgorithmIdentifier, CryptoKey, BufferSource, BufferSource)
PASS SubtleCrypto interface: operation digest(AlgorithmIdentifier, BufferSource)
PASS SubtleCrypto interface: operation generateKey(AlgorithmIdentifier, boolean, [object Object])
PASS SubtleCrypto interface: operation deriveKey(AlgorithmIdentifier, CryptoKey, AlgorithmIdentifier, boolean, [object Object])
PASS SubtleCrypto interface: operation deriveBits(AlgorithmIdentifier, CryptoKey, unsigned long)
PASS SubtleCrypto interface: operation importKey(KeyFormat, [object Object],[object Object], AlgorithmIdentifier, boolean, [object Object])
PASS SubtleCrypto interface: operation exportKey(KeyFormat, CryptoKey)
PASS SubtleCrypto interface: operation wrapKey(KeyFormat, CryptoKey, CryptoKey, AlgorithmIdentifier)
PASS SubtleCrypto interface: operation unwrapKey(KeyFormat, BufferSource, CryptoKey, AlgorithmIdentifier, AlgorithmIdentifier, boolean, [object Object])
Harness: the test ran to completion.

